# noise-man

./: AGENTS.md  README.md  package-lock.json  package.json
.pi/agents/: architect.md  backend-dev.md  designer.md  frontend-dev.md  reviewer.md  scout.md  tester.md
.pi/extensions/: sandbox.ts
.pi/extensions/subagent/: agents.ts
.pi/prompts/: add-feature.md  build.md  design.md  implement.md  test-and-fix.md
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_api.py  test_export.py  test_noise_content.py
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  AudioEngine.ts  index.css
